--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "markdown-it-footnote": "^3.0.2",
     "vue-select": "^3.10.8",
     "vuepress": "^1.7.1"
+  },
+  "devDependencies": {
+    "push-dir": "^0.4.1"
   }
 }
