--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
+    "docs:build_subfolder": "DEPLOY_ENV=WITH_SUBFOLDER vuepress build docs",
     "deploy": "push-dir --dir=docs/.vuepress/dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
