Don't use subfolder

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
         npm install
     - name: Run build
       run: |
-        npm run docs:build_subfolder
+        npm run docs:build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
