--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Country Development Finance Data documentation",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -19,6 +19,7 @@
     "markdown-it-footnote": "^3.0.3",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
+    "transliteration": "^2.3.5",
     "vue": "^2.6.14",
     "vue-select": "^3.13.2",
     "vue-server-renderer": "^2.6.14",
