--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "@nuxtjs/gtm": "^2.4.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.19.3",
+    "leaflet": "^1.9.2",
     "markdown-it-footnote": "^3.0.3",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
+    "nuxt-leaflet": "^0.0.27",
     "transliteration": "^2.3.5",
     "vue": "^2.6.14",
-    "vue-select": "^3.13.2",
+    "vue-chartjs": "^3.5.1",
+    "vue-select": "^3.20.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue2-leaflet": "^2.7.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
