--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/gtm": "^2.4.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
