--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,10 +18,10 @@ jobs:
         npm install
     - name: Run build
       run: |
-        npm run gen-gh
+        npm run generate
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
-      if: ${{ github.ref == 'refs/heads/nuxtjs-rewrite' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
