--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue2-leaflet": "^2.7.1",
+    "vuedraggable": "^2.24.3",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
