--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nuxt/content": "^1.15.1",
     "push-dir": "^0.4.1",
     "sass": "^1.54.4",
-    "sass-loader": "^10.3.1"
+    "sass-loader": "^10.3.1",
+    "vue-plausible": "^1.3.2"
   }
 }
