Update chart.js version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/gtm": "^2.4.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.9.1",
+    "chartjs-chart-sankey": "^0.12.0",
     "core-js": "^3.19.3",
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.2",
@@ -29,7 +30,7 @@
     "nuxt-leaflet": "^0.0.27",
     "transliteration": "^2.3.5",
     "vue": "^2.6.14",
-    "vue-chartjs": "^3.5.1",
+    "vue-chartjs": "^4.1.2",
     "vue-select": "^3.20.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
